
[package]
name = "stm32ral"
version = "0.1.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
description = "Register access layer for all STM32 microcontrollers"
repository = "https://github.com/adamgreig/stm32ral"
documentation = "https://docs.rs/stm32ral"
readme = "README.md"
keywords = ["stm32", "embedded", "no_std"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"

[features]
default = []
unsafe = []
doc = []
stm32f0x0 = []
stm32f0x1 = []
stm32f0x2 = []
stm32f0x8 = []
stm32f3x4 = []
stm32f3x8 = []
stm32f301 = []
stm32f302 = []
stm32f303 = []
stm32f373 = []
stm32f7x2 = []
stm32f7x3 = []
stm32f7x5 = []
stm32f7x6 = []
stm32f7x7 = []
stm32f7x9 = []
stm32f100 = []
stm32f101 = []
stm32f102 = []
stm32f103 = []
stm32f107 = []
stm32f215 = []
stm32f217 = []
stm32f401 = []
stm32f405 = []
stm32f407 = []
stm32f410 = []
stm32f411 = []
stm32f412 = []
stm32f413 = []
stm32f427 = []
stm32f429 = []
stm32f446 = []
stm32f469 = []
stm32h7x3 = []
stm32l0x1 = []
stm32l0x2 = []
stm32l0x3 = []
stm32l4x1 = []
stm32l4x2 = []
stm32l4x3 = []
stm32l4x5 = []
stm32l4x6 = []
stm32l100 = []
stm32l151 = []
stm32l162 = []
